<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/pickFileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_file" />

    <TextView
        android:id="@+id/lettersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/letters_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/spacesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/spaces_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/symbolsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/symbols_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

</LinearLayout>
